<resources>
    <string name="app_name">FitHub</string>
    <string name="coach" translatable="false">Coach</string>
    <string name="athlete" translatable="false">Athlete</string>
    <string name="btn_add">Measure</string>
    <string name="btn_healthcare">Healthcare</string>
    <string name="btn_my_patients">Patients</string>
    <string name="btn_home">Home</string>
    <string name="btn_my_account">Account</string>
    <string name="home"> Home </string>
    <string name="healthcare">Healthcare</string>
    <string name="my_patients"> My Patients </string>
    <string name="my_account"> My Account </string>
    <string name="my_data"> My Date </string>
    <string name="press_back_again"> Press back again to exit </string>
    <string name="my_athlete">My Athlete</string>
    <string name="my_athlete_explain">Here you can find your Athlete</string>
    <string name="measurements">Measurements</string>
    <string name="last_measurement">Last measurement</string>
    <string name="add_plan">Add plan</string>
    <string name="expenses">Expenses</string>
    <string name="goal">Goal</string>
    <string name="history">History</string>
    <string name="treatment">Treatment</string>
    <string name="tell_us">Tell us about you</string>
    <string name="new_treatment">New treatment</string>
    <string name="decision_account" translatable="false">Who are you?</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="sign_up">SIGN UP</string>
    <string name="gender">Gender</string>
    <string name="Height">Height</string>
    <string name="Weight">Weight</string>
    <string name="sign_up_coach" translatable="false">JOIN US COACH</string>
    <string name="forgett_pass">Did you forget the password? Click Here!</string>
    <string name="create_account">You don\'t have an account? Create Now!</string>
    <string name="login">Did you have an account? Log in!</string>
    <string name="login_coach" translatable="false">Are you a coach? Log in!</string>
    <string name="login_coach_lbl" translatable="false">Welcome Coach!</string>
    <string name="login_qr_code_doctor_explain" translatable="false">You can access by scanning the QRcode of your badge</string>
    <string name="btn_qr_code_doctor" translatable="false">SCAN NOW</string>
    <string name="btn_login_patient" translatable="false">Aren\'t you a coach? Log in as a athlete!</string>
    <string name="numero_registrazione" translatable="false">Registration number</string>
    <string name="select_specilization" translatable="false">Choose your specialization</string>
    <string name="number_phone" translatable="false">Phone number</string>
    <string name="incorrect_login">Incorrect email or password!</string>
    <string name="registration_failed">Registration error!</string>
    <string name="registration_success">Registration success!</string>
    <string name="user_already_exists">Users Already Exists!</string>
    <string name="user_not_exists">Check Email or Password!</string>
    <string name="error">Error!</string>
    <string name="something_wrong">Something went wrong!</string>
    <string name="empty_fields_email" translatable="false">Please complete the email field</string>
    <string name="empty_fields_password" translatable="false">Please complete the password field</string>
    <string name="empty_fields_nome" translatable="false">Please complete the name field</string>
    <string name="empty_fields_cognome" translatable="false">Please complete the surname field</string>
    <string name="empty_fields_data" translatable="false">Please complete the date of birth field</string>
    <string name="empty_fields_region" translatable="false">Please complete the region field</string>
    <string name="empty_fields_registration_number" translatable="false">Please complete the registration number field</string>
    <string name="empty_fields_specialization" translatable="false">Please complete the specialization field</string>
    <string name="measure">Measure</string>
    <string name="explain_measure">Here you can connect to the biomedical equipment container </string>
    <string name="last_measure">Last Measure</string>
    <string name="last_measure_explain">Here you can see the result of your last Measure</string>
    <string name="attention">Attention!</string>
    <string name="explain_permission_camera">You must allow the use of the camera to use this function</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="go_back">Go back</string>
    <string name="going_back">Go back?</string>
    <string name="unsaved_changes">Any unsaved changes will be lost</string>
    <string name="fill_inputs">Fill all inputs to proceed</string>
    <string name="insert_start_date">Insert start date</string>
    <string name="insert_end_date">Insert end date</string>
    <string name="treatment_plan">Treatment plan</string>
    <string name="treatment_goal">What is the tratment goal?</string>
    <string name="insert_goal">Insert goal</string>
    <string name="treatment_duration">Treatment duration</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="btn_continue">Continue</string>
    <string name="no_end_date">No end date</string>
    <string name="medications">Medications</string>
    <string name="medication">Medication</string>
    <string name="notes">Notes</string>
    <string name="additional_notes">Additional notes</string>
    <string name="treatment_goal_empty">Treatment goal cannot be empty</string>
    <string name="insert_medication">Insert medication</string>
    <string name="how_to_take_medication">How to take this medication?</string>
    <string name="medication_name">What is the medication name?</string>
    <string name="how_regularly">How regularly?</string>
    <string name="select">Select</string>
    <string name="save_password" translatable="false">Save password</string>
    <string name="save_password_explain" translatable="false">Save password to login automatically?</string>
    <string name="yes" translatable="false">Yes</string>
    <string name="no" translatable="false">No</string>
    <string name="birth_date">Enter your Birth Date</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_not_match">Passwords do not match</string>
    <string name="sign_in" translatable="false">Sign in</string>
    <string name="empty_fields" translatable="false">Fill all inputs!</string>
    <string name="good_morning">Good morning</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="insert_note">Insert a note</string>
    <string name="select_time">Select time</string>
    <string name="gym" >Gym</string>
    <string name="healthy_food_tips">Healthy food</string>
    <string name="proper_nutrition" >Proper nutrition</string>
    <string-array name="musclegroup_array">
        <item>Chest</item>
        <item>Back</item>
        <item>Shoulders</item>
        <item>Biceps</item>
        <item>Triceps</item>
        <item>Legs and Buttoncks</item>
        <item>Abdomen</item>
    </string-array>
    <string-array name="chest_exercise_array">
        <item>Flat bench with barbell</item>
        <item>Flexions</item>
        <item>Fly with dumbbells on incline bench</item>
        <item>Dips on parallel bars</item>
        <item>Push-ups with tight grip</item>
        <item>Crossover with cable</item>
    </string-array>
    <string-array name="back_exercise_array">
        <item>Bar pull-ups (Pull-up)</item>
        <item>Remator with barbell</item>
        <item>Remator with dumbbell</item>
        <item>Pull-down at the cable</item>
        <item>Pullover with dumbbell or barbell</item>
        <item>Pull-down to death</item>
    </string-array>
    <string-array name="shoulders_exercise_array">
        <item>Lateral lifts with dumbbells</item>
        <item>Front lifts with dumbbells or barbell</item>
        <item>Shoulders with dumbbells or barbell</item>
        <item>Shoulder lifts with dumbbells or barbell</item>
        <item>Vertical presses with front wall</item>
        <item>Arnold press</item>
    </string-array>
    <string-array name="biceps_exercise_array">
        <item>Curl with barbell</item>
        <item>Curl with dumbbells</item>
        <item>Curl with cables</item>
        <item>Curl hammer</item>
        <item>Curl concentration</item>
        <item>Chin-up (or tight pull-up)</item>
    </string-array>
    <string-array name="triceps_exercise_array">
        <item>French press with barbell</item>
        <item>Push-downs at cables</item>
        <item>Overhead rope extensions</item>
        <item>Down to parallel bars</item>
        <item>Domed spheres (skull crush)</item>
        <item>Extensions with dumbbells behind the head</item>
    </string-array>
    <string-array name="legs_and_glutes_exercise_array">
        <item>Squat with barbell</item>
        <item>Floor Jumps (Deadlift)</item>
        <item>Dumbbell lunges with dumbbells</item>
        <item>Presses for the legs</item>
        <item>Bridge for glutes</item>
        <item>Curleys</item>
    </string-array>
    <string-array name="abdominal_exercise_array">.
        <item>Crunch</item>
        <item>Leg raises (leg lifts)</item>
        <item>Plank</item>
        <item>Mountain climbers</item>
        <item>Rolling twists</item>
        <item>Bicycle crushers</item>
    </string-array>
    <string-array name="medicines_list">
        <item>Paracetamol</item>
        <item>Aspirin</item>
        <item>Ibuprofen</item>

        
        <item>Oki 500mg</item>
        <item>Oki 1000mg</item>

        
        <item>Amoxicillin 250mg</item>
        <item>Amoxicillin 500mg</item>

        
        <item>Codeine 10mg</item>
        <item>Codeine 20mg</item>
    </string-array>
    <string-array name="how_to_take_medicine_list">
        <item> Tablet/s </item>
        <item> Drop/s </item>
        <item> Sachet/s </item>
        <item> Suppository/ies </item>
        <item> Milliliters </item>
        <item> Syringe/s </item>
        <item> Inhalation </item>
    </string-array>
    <string-array name="how_regularly_list">
        <item>Daily</item>
        <item>Interval</item>
        <item>Weekdays</item>
    </string-array>
    <string-array name="specialization_arry">
        <item>Anesthesiology</item>
        <item>Cardiology</item>
        <item>General surgery</item>
        <item>Dermatology</item>
        <item>Endocrinology</item>
        <item>Gastroenterology</item>
        <item>Geriatrics</item>
        <item>Gynecology and obstetrics</item>
        <item>Immunology</item>
        <item>Emergency medicine</item>
        <item>Sports medicine</item>
        <item>Family medicine</item>
        <item>Internal medicine</item>
        <item>Neurology</item>
        <item>Oncology</item>
        <item>Orthopedics</item>
        <item>Otolaryngology (ENT)</item>
        <item>Pediatrics</item>
        <item>Psychiatry</item>
        <item>Radiology</item>
        <item>Rheumatology</item>
        <item>Urology</item>
    </string-array>
    <string name="add_one_if_needed">Add one if needed</string>
    <string name="no_patient_found">No athlete found</string>
    <string name="payments">Payments</string>
    <string name="diary">Diary</string>
    <string name="my_videos">My videos</string>
    <string name="my_videos_explain">Here you can find your Videos</string>
</resources>