<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/btn_home" />


    <item
        android:id="@+id/navigation_video"
        android:icon="@drawable/video_icon"
        android:title="Video" />

    <item
        android:id="@+id/navigation_measure"
        android:icon="@drawable/award"
        android:title="@string/goal" />

    <item
        android:id="@+id/navigation_diary"
        android:icon="@drawable/diary"
        android:title="@string/diary" />

    <item
        android:id="@+id/navigation_my_account"
        android:icon="@drawable/my_account"
        android:title="@string/btn_my_account" />

</menu>