<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".doctor.fragments.TreatmentFormGeneralFragment">


        <!--This the interface sitting behind the backdrop and shown when it is collapsed-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/md_theme_light_surface"
            android:orientation="vertical"
            android:padding="4dp">

            <com.kofigyan.stateprogressbar.StateProgressBar
                android:id="@+id/state_progress_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:spb_animateToCurrentProgressState="true"
                app:spb_checkStateCompleted="true"
                app:spb_currentStateDescriptionColor="@color/md_theme_light_primary"
                app:spb_currentStateNumber="one"
                app:spb_maxStateNumber="three"
                app:spb_stateBackgroundColor="#BDBDBD"
                app:spb_stateDescriptionColor="#808080"
                app:spb_stateForegroundColor="@color/md_theme_light_primary"
                app:spb_stateNumberBackgroundColor="#808080"
                app:spb_stateNumberForegroundColor="#eeeeee"
                app:spb_descriptionTopSpaceIncrementer="8dp"
                app:spb_animationDuration="1000"/>

            <TextView
                style="@style/TitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:text="@string/treatment_plan" />


            <TextView
                style="@style/SubtitleText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/treatment_goal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:baselineAligned="false">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/treatmentTargetInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:hint="@string/insert_goal"
                    app:startIconContentDescription="Goal"
                    app:startIconDrawable="@drawable/target">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/treatmentTargetEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <TextView
                style="@style/SubtitleText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/treatment_duration" />

            <TextView
                style="@style/SubtitleText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/start_date" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/startDate"
                    style="@style/CustomMaterialButton"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/insert_start_date"
                    android:textAllCaps="false"
                    app:icon="@drawable/event"
                    app:iconGravity="end" />

            </LinearLayout>

            <TextView
                style="@style/SubtitleText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/end_date" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/SubtitleText3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:text="@string/no_end_date" />

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/noEndDateSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:checked="false"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/endDateLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/endDate"
                    style="@style/CustomMaterialButton"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/insert_end_date"
                    android:textAllCaps="false"
                    app:icon="@drawable/event"
                    app:iconGravity="end" />
            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/goBack"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:text="@string/go_back" />

        <Button
            android:id="@+id/goNext"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:text="@string/btn_continue"
            android:textAllCaps="true"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>