<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".doctor.fragments.MyPatientsFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/TitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/measure"
                android:layout_margin="16dp" />

            <LinearLayout
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <TextView
                style="@style/SubtitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/explain_measure">

            </TextView>
            <Button
                android:id="@+id/btnMeasure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/measure"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"></Button>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="40dp">

            <FrameLayout
                android:id="@+id/frameLayout_measure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/last_measure_title"
                    style="@style/SubtitleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_measure"
                    android:layout_marginLeft="10dp"/>

                <TextView
                    android:id="@+id/last_measure_explain"
                    style="@style/CardViewTitleText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_measure_explain"
                    android:layout_marginTop="50dp"
                    android:layout_marginLeft="5dp"/>

                <TextView
                    android:id="@+id/last_measure_data"
                    style="@style/RegularText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_measure_explain"
                    android:layout_marginTop="110dp"
                    android:layout_marginLeft="5dp"/>


            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
    </FrameLayout>
</androidx.core.widget.NestedScrollView>
